@@ -1,6 +1,7 @@
 DIST duplicati-bin-2.0.1.61.20170530.rpm 7313950 SHA256 e6b577240efa066530436ff834d470af4e71ec0c30c86d8501c889f05c3af39a SHA512 dcbc62a5343c732713a136fb03030a274aaa4b7a53101754fdb987462b06fe77b4fe96432a39ace9f3bee1713082cc768ed586d1c001c1686f6ff6f584bec1dc WHIRLPOOL 8f6db4a9def548bdb8cdf05ac49715237443232ee99f131e59a854eb74aae6d2894016720b607b4319ddd1c9ca4b2623d42f2bed90b1309e5ae0f0b8d55e5c57
 DIST duplicati-bin-2.0.2.1_beta20170801.rpm 7447686 SHA256 572a8a341a0783ed952a02ed9307f709d06e0f2004e13f626eb00ae3c554cb84 SHA512 372603b8e48111e430403421ac8c611932534e5343564abf4c9ebf297b002de83d771cda4544c59a78d6faf3b794882265a75c669f19f17f2c6fb91fa64e16b5 WHIRLPOOL aecbe49812f57551943d86916ee4d7d60e478e2ebb2bd738f1a9088e924de423d22b5d0a3b8334edd2870a3903a0c16f89f7341f41df78477ca222c9e4a30ff2
 EBUILD duplicati-bin-2.0.1.61.20170530.ebuild 796 SHA256 86726fee7c044eaa3059679c966566f0a06c1df75701c8cb9eb1e4f0e43435a2 SHA512 5e1e38933e9403779efde65bf7c27c2a7e2a03003ac138873ac9dda6ae61f88b232fb1a24336104a960d6921249a0ed45d4bd3edc909860d2816dc3da46f0209 WHIRLPOOL e1770336b3fda3b572c39757d7270d11259a54a7ad6b381b2dcc243ed8072648836e8a37cc8fe6f44b41ca7f1e538d5c2bd6439210d720d6581b19dd247feac7
+EBUILD duplicati-bin-2.0.2.1_beta20170801-r1.ebuild 817 SHA256 f0782a18d5b9c00ad8082c2d624a31590474789a7beb9152251d32dc4ddf794a SHA512 11b4f0697d33a8e1d74e78f34aa17bdfd7213440d049414021e249a90e0e354c5d84cd8a8a5d0b65167905bceeba9309699f72ce745ac07301ef4ec473cfe58f WHIRLPOOL b6e60cf82e95609c63449d4df76c036e0a18bfc993d071e9a3616a01cdb9e7a411e13b0252536f8074bcab2f2e6f14a4ab64fdbe34902e6d476b95c9ccf68e4f
 EBUILD duplicati-bin-2.0.2.1_beta20170801.ebuild 787 SHA256 2c8bbac18c5b2dce054b0ffe9ff4ec82f27593c768b17e8547defa0dd5c06935 SHA512 f2b9b24a16efead7913ce69e49f8f5fff81332270f345aca0ed27ddcc47bc612765e165107064d5e3f5967756077664b02ca99fc642025e4d979f0b6f1e907ac WHIRLPOOL e9cde5bd91ae361cb6b1944710f12ef9368a424ec3098fc9de1b355632d5c08fdf444dd895e24841bf905344178ccab4ebd40eedfb53b06d6ecf799b124dc769
-MISC ChangeLog 464 SHA256 b1eaaf5c79db7a16bd5c2d68866cd8d560f304a19d7081d5a77997f70cad14ac SHA512 3f0051ac9853eeedf5bbbe2d4310512a8b22763ae2a9f6f47ece42b852e8b97f6596322b8fb85220571981aa62ef99fd6ba4eee84cf6f979f38c2916f513ebcd WHIRLPOOL cc5366943ad9e674a61c9fab3d00f8b96e2754da35c6914f86646e397b5198cb026f8e5bb541b60e052283c342b33fcbc3fd0f63fe7c7bb37875fea3c02b242c
+MISC ChangeLog 730 SHA256 fc374e51986f9ac5cadcc21a8257fbdc36f8fa53feae3ed039ecb1d7e8c6e7ed SHA512 846566f4e48406f52a7d245ed199b016eb21ad9006d89ebcc3da5e23e4b8f44c2262af19cad71b253a87044c486bfb29301659e8c3d59a6bf343e33152f82260 WHIRLPOOL 9edbbe42c07c6420e7711e0ccb1d0826ccdb18681501a9d7efd6faf50cc1ea4af73564971acb7c1e05b9539b076cec4ce23d1e5a6aa518e67f76e0364226445e
 MISC metadata.xml 248 SHA256 7b43be15755627edf5c12cf1b50c607d781558640bf8375d685d51d7ade99a32 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2 WHIRLPOOL 993013c9878ead35469db13d3072f694a341ee654182e0c31d0678f5dd6de4bdc8d59a0b7bb6d685dc41ea6b55dac518cd8034131baea8002170c680e50304d1
